--- a/Code/Briaud_2007.ipynb
+++ b/Code/Briaud_2007.ipynb
@@ -220,7 +220,7 @@
     "    7. Generates plots for pressure vs. strain, strain influence area, and\n",
     "       settlement vs. load.\n",
     "\n",
-    "Author: Brhane W. Ygzaw\n",
+    "Author: Brhane W. Ygzaw, PhD.\n",
     "Date: 03-25-2025\n",
     "\"\"\"\n",
     "\n",
